[gd_scene load_steps=6 format=3 uid="uid://cdxwdtmf7dr8l"]

[ext_resource type="Texture2D" uid="uid://0iyht37wj4me" path="res://Sprites/Misc/Móveis/tv 01 (visão traseira).png" id="1_dit4j"]
[ext_resource type="Script" uid="uid://v11uotpu6bmn" path="res://Scripts/tv.gd" id="1_grc72"]
[ext_resource type="Texture2D" uid="uid://bq2t1q7bafmw1" path="res://Textures/circle_light.tres" id="2_grc72"]

[sub_resource type="CircleShape2D" id="CircleShape2D_dit4j"]
radius = 108.005

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ul422"]
size = Vector2(62, 88)

[node name="Tv1" type="Node2D" node_paths=PackedStringArray("lights")]
script = ExtResource("1_grc72")
lights = [NodePath("PointLight2D")]

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(-3, -69)
scale = Vector2(2.39623, 2.39623)
energy = 2.0
shadow_enabled = true
texture = ExtResource("2_grc72")

[node name="LightDetectArea" type="Area2D" parent="PointLight2D"]
position = Vector2(2.08661, 0.834644)
scale = Vector2(0.417323, 0.417323)
collision_layer = 32
collision_mask = 18

[node name="CollisionShape2D" type="CollisionShape2D" parent="PointLight2D/LightDetectArea"]
shape = SubResource("CircleShape2D_dit4j")
debug_color = Color(0.996078, 0, 0.192157, 0.054902)

[node name="LightPositionMarker" type="Marker2D" parent="PointLight2D"]
position = Vector2(0, 0.834644)
scale = Vector2(0.417323, 0.417323)

[node name="InteractArea" type="Area2D" parent="."]
position = Vector2(0, -49)
collision_layer = 1024
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractArea"]
position = Vector2(0, 5)
shape = SubResource("RectangleShape2D_ul422")
debug_color = Color(0.773918, 0.442476, 5.77569e-07, 0)

[node name="InteractHighlight" type="Line2D" parent="."]
visible = false
points = PackedVector2Array(-33, 0, -33, -5, -36, -5, -36, -51, -28, -51, -28, -87, 29, -87, 29, -51, 37, -51, 37, -4, 34, -4, 34, 0, 21, 0, 21, -4, -20, -4, -20, 0)
closed = true
width = 3.0
default_color = Color(1, 0.717647, 0, 1)

[node name="Sprite2D" type="Sprite2D" parent="."]
light_mask = 32
position = Vector2(0, -50)
texture = ExtResource("1_dit4j")

[connection signal="area_entered" from="PointLight2D/LightDetectArea" to="." method="_on_light_detect_area_area_entered"]
[connection signal="area_exited" from="PointLight2D/LightDetectArea" to="." method="_on_light_detect_area_area_exited"]
[connection signal="body_entered" from="PointLight2D/LightDetectArea" to="." method="_on_light_detect_area_body_entered"]
[connection signal="body_exited" from="PointLight2D/LightDetectArea" to="." method="_on_light_detect_area_body_exited"]
